# dependency-analysis-mcp

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_GITHUB.md  README_Inspector.md  README_MCP.md  README_TOOLS.md  README_flyio.md  SECURITY.md  fly.toml  pyproject.toml  stash.txt
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: codeql.yml  scorecard.yml
dependency_analysis_mcp/: __init__.py  markdown_format.py  pinning_scan.py  server.py  services.py
