[project]
name = "dependencyanalysismcp"
version = "0.1.0"
description = "FastMCP server for registry/GitHub release sync, Snyk public pages, and OpenSSF Scorecard"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "packaging>=24.0",
    "cvss>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
dependency-analysis-mcp = "dependency_analysis_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dependency_analysis_mcp"]
