[project]
name = "dependencyanalysismcp"
version = "0.1.0"
description = "FastMCP server for registry/GitHub release sync, Snyk public pages, and OpenSSF Scorecard"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.14.3",
    "fastmcp==3.1.0",
    "httpx==0.28.1",
    "packaging==25.0",
    "cvss==3.6",
    "pyyaml==6.0.3",
]

[project.scripts]
dependency-analysis-mcp = "dependency_analysis_mcp.server:main"

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dependency_analysis_mcp"]
